Update MOREJAVAFX.md